cmake_minimum_required(VERSION 3.25)
project(cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(cpp main.cpp)

add_executable(C4_4 LiuLiu/C4_4.cpp)
add_executable(C7_1 LiuLiu/C7_1.cpp)
add_executable(C7_4 LiuLiu/C7_4.cpp)
add_executable(C7_8 LiuLiu/C7_8.cpp)
add_executable(C7_9 LiuLiu/C7_9.cpp)

add_executable(C8_4 LiuLiu/C8_4.cpp)
add_executable(C8_10 LiuLiu/C8_10.cpp)
add_executable(C8_13 LiuLiu/C8_13.cpp)

add_executable(C9_3 LiuLiu/C9_3.cpp)
add_executable(C10_4 LiuLiu/C10_4.cpp)
add_executable(C10_10 LiuLiu/C10_10.cpp)


add_executable(cgi LiuLiu/cgi.cpp)